--- a/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
+++ b/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
@@ -117,6 +117,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="EMPTY_CITY" xml:space="preserve">
+    <value>'City' é um campo obrigatório.</value>
+  </data>
+  <data name="EMPTY_IBGECODE" xml:space="preserve">
+    <value>'IBGECode' é um campo obrigatório.</value>
+  </data>
+  <data name="EMPTY_STATE" xml:space="preserve">
+    <value>'State' é um campo obrigatório.</value>
+  </data>
+  <data name="INVALID_CODE" xml:space="preserve">
+    <value>Código de munícipio informado não é válido.</value>
+  </data>
+  <data name="INVALID_STATE" xml:space="preserve">
+    <value>O estado informado não existe.</value>
+  </data>
   <data name="UNKNOW_ERROR" xml:space="preserve">
     <value>Erro desconhecido.</value>
   </data>
