--- a/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.resx
+++ b/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.resx
@@ -117,6 +117,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="EMPTY_CITY" xml:space="preserve">
+    <value>'City' is a required field.</value>
+  </data>
+  <data name="EMPTY_IBGECODE" xml:space="preserve">
+    <value>'IBGECode' is a required field.</value>
+  </data>
+  <data name="EMPTY_STATE" xml:space="preserve">
+    <value>'State' is a required field.</value>
+  </data>
+  <data name="INVALID_CODE" xml:space="preserve">
+    <value>City code entered is not valid.</value>
+  </data>
+  <data name="INVALID_STATE" xml:space="preserve">
+    <value>The state reported does not exist.</value>
+  </data>
   <data name="UNKNOW_ERROR" xml:space="preserve">
     <value>Unknow error.</value>
   </data>
