TASK3 - Ajustes em validação - Ajusta mensagens de erro - Ajusta ENUM

--- a/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
+++ b/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
@@ -129,6 +129,9 @@
   <data name="IBGE_CREATED" xml:space="preserve">
     <value>Localidade informada foi registrado com sucesso.</value>
   </data>
+  <data name="INVALID_CITY" xml:space="preserve">
+    <value>Cidade informada não é válida.</value>
+  </data>
   <data name="INVALID_CODE" xml:space="preserve">
     <value>Código de munícipio informado não é válido.</value>
   </data>
