--- a/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
+++ b/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
@@ -126,6 +126,9 @@
   <data name="EMPTY_STATE" xml:space="preserve">
     <value>'State' é um campo obrigatório.</value>
   </data>
+  <data name="EXISTING_CODE" xml:space="preserve">
+    <value>O código de município informado já está registrado.</value>
+  </data>
   <data name="IBGE_CREATED" xml:space="preserve">
     <value>Localidade informada foi registrado com sucesso.</value>
   </data>
@@ -133,7 +136,7 @@
     <value>Cidade informada não é válida.</value>
   </data>
   <data name="INVALID_CODE" xml:space="preserve">
-    <value>Código de munícipio informado não é válido.</value>
+    <value>Código de município informado não é válido.</value>
   </data>
   <data name="INVALID_STATE" xml:space="preserve">
     <value>O estado informado não existe.</value>
