TASK4 - Regra de negócio Update - Adiciona mensagens de erro - Adiciona regra de negócio para update - Adiciona validações para request

--- a/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.resx
+++ b/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.resx
@@ -141,6 +141,9 @@
   <data name="INVALID_STATE" xml:space="preserve">
     <value>The state reported does not exist.</value>
   </data>
+  <data name="NO_EXISTING_CODE" xml:space="preserve">
+    <value>The city code entered is not registered.</value>
+  </data>
   <data name="UNKNOW_ERROR" xml:space="preserve">
     <value>Unknow error.</value>
   </data>
