--- a/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
+++ b/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
@@ -141,6 +141,9 @@
   <data name="INVALID_STATE" xml:space="preserve">
     <value>O estado informado não existe.</value>
   </data>
+  <data name="NO_EXISTING_CODE" xml:space="preserve">
+    <value>O código de município informado não está registrado.</value>
+  </data>
   <data name="UNKNOW_ERROR" xml:space="preserve">
     <value>Erro desconhecido.</value>
   </data>
