TASK4 - Cria endpoint para update - Adiciona validações padrões - Adiciona mensagens - Cria endpoint na controller - Cria lógica para regra de negócio - Cria corpo de request

--- a/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
+++ b/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
@@ -147,4 +147,7 @@
   <data name="UNKNOW_ERROR" xml:space="preserve">
     <value>Erro desconhecido.</value>
   </data>
+  <data name="UPDATED_IBGE" xml:space="preserve">
+    <value>Informações solicitadas foram atualizadas com sucesso.</value>
+  </data>
 </root>
