--- a/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.resx
+++ b/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.resx
@@ -126,6 +126,9 @@
   <data name="EMPTY_STATE" xml:space="preserve">
     <value>'State' is a required field.</value>
   </data>
+  <data name="EXECUTION_SUCCESS_MSG" xml:space="preserve">
+    <value>Method executed successfully</value>
+  </data>
   <data name="EXISTING_CODE" xml:space="preserve">
     <value>The city code entered is already registered.</value>
   </data>
