refactor: foi melhorado a lógica de paginação, o json de entrada e adicionado novas mensagens

--- a/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
+++ b/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
@@ -123,6 +123,12 @@
   <data name="EMPTY_IBGECODE" xml:space="preserve">
     <value>'IBGECode' é um campo obrigatório.</value>
   </data>
+  <data name="EMPTY_PAGEINDEX" xml:space="preserve">
+    <value>'PageIndex' é um campo obrigatório</value>
+  </data>
+  <data name="EMPTY_PAGESIZE" xml:space="preserve">
+    <value>'PageSize' é um campo obrigatório</value>
+  </data>
   <data name="EMPTY_STATE" xml:space="preserve">
     <value>'State' é um campo obrigatório.</value>
   </data>
@@ -135,11 +141,20 @@
   <data name="IBGE_CREATED" xml:space="preserve">
     <value>Localidade informada foi registrado com sucesso.</value>
   </data>
+  <data name="INDEX_TOO_LARGE" xml:space="preserve">
+    <value>O valor do índice da página é muito grande. Por favor insira um valor inteiro entre 0 e {0}</value>
+  </data>
   <data name="INVALID_CITY" xml:space="preserve">
     <value>Cidade informada não é válida.</value>
   </data>
   <data name="INVALID_CODE" xml:space="preserve">
     <value>Código de município informado não é válido.</value>
+  </data>
+  <data name="INVALID_PAGEINDEX" xml:space="preserve">
+    <value>O valor inserido no PageIndex não é válido</value>
+  </data>
+  <data name="INVALID_PAGESIZE" xml:space="preserve">
+    <value>O valor inserido no PageSize não é válido</value>
   </data>
   <data name="INVALID_STATE" xml:space="preserve">
     <value>O estado informado não existe.</value>
