--- a/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.resx
+++ b/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.resx
@@ -123,6 +123,12 @@
   <data name="EMPTY_IBGECODE" xml:space="preserve">
     <value>'IBGECode' is a required field.</value>
   </data>
+  <data name="EMPTY_PAGEINDEX" xml:space="preserve">
+    <value>'PageIndex' is a required field</value>
+  </data>
+  <data name="EMPTY_PAGESIZE" xml:space="preserve">
+    <value>'PageSize' is a required field</value>
+  </data>
   <data name="EMPTY_STATE" xml:space="preserve">
     <value>'State' is a required field.</value>
   </data>
@@ -135,11 +141,20 @@
   <data name="IBGE_CREATED" xml:space="preserve">
     <value>Location entered was successfully registered.</value>
   </data>
+  <data name="INDEX_TOO_LARGE" xml:space="preserve">
+    <value>The page index value is too large. Please enter an integer value between 0 and {0}</value>
+  </data>
   <data name="INVALID_CITY" xml:space="preserve">
     <value>City entered is not valid.</value>
   </data>
   <data name="INVALID_CODE" xml:space="preserve">
     <value>City code entered is not valid.</value>
+  </data>
+  <data name="INVALID_PAGEINDEX" xml:space="preserve">
+    <value>PageIndex entered value is not valid</value>
+  </data>
+  <data name="INVALID_PAGESIZE" xml:space="preserve">
+    <value>PageSize entered  value is not valid</value>
   </data>
   <data name="INVALID_STATE" xml:space="preserve">
     <value>The state reported does not exist.</value>
