--- a/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
+++ b/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BLANK_PAGE" xml:space="preserve">
+    <value>Página em branco, sem mais registros. Volte uma página ou reduza o número de registros por página.</value>
+  </data>
   <data name="EMPTY_CITY" xml:space="preserve">
     <value>'City' é um campo obrigatório.</value>
   </data>
