--- a/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.resx
+++ b/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BLANK_PAGE" xml:space="preserve">
+    <value>Blank page, no more records. Go back a page or reduce the number of records per page.</value>
+  </data>
   <data name="EMPTY_CITY" xml:space="preserve">
     <value>'City' is a required field.</value>
   </data>
