--- a/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.resx
+++ b/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.resx
@@ -144,6 +144,9 @@
   <data name="IBGE_CREATED" xml:space="preserve">
     <value>Location entered was successfully registered.</value>
   </data>
+  <data name="IBGE_REMOVED" xml:space="preserve">
+    <value>Location informed was successfully removed.</value>
+  </data>
   <data name="INDEX_TOO_LARGE" xml:space="preserve">
     <value>The page index value is too large. Please enter an integer value between 0 and {0}.</value>
   </data>
