--- a/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
+++ b/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
@@ -141,6 +141,9 @@
   <data name="EXISTING_CODE" xml:space="preserve">
     <value>O código de município informado já está registrado.</value>
   </data>
+  <data name="EXISTING_EMAIL" xml:space="preserve">
+    <value>Já existe um usuário com este e-mail {0}.</value>
+  </data>
   <data name="IBGE_CREATED" xml:space="preserve">
     <value>Localidade informada foi registrado com sucesso.</value>
   </data>
@@ -173,5 +176,8 @@
   </data>
   <data name="UPDATED_IBGE" xml:space="preserve">
     <value>Informações solicitadas foram atualizadas com sucesso.</value>
+  </data>
+  <data name="USER_CREATED" xml:space="preserve">
+    <value>Usuário criado com sucesso.</value>
   </data>
 </root>
