--- a/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
+++ b/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
@@ -123,6 +123,9 @@
   <data name="EMPTY_CITY" xml:space="preserve">
     <value>'City' é um campo obrigatório.</value>
   </data>
+  <data name="EMPTY_EMAIL" xml:space="preserve">
+    <value>'Email' é um campo obrigatório.</value>
+  </data>
   <data name="EMPTY_IBGECODE" xml:space="preserve">
     <value>'IBGECode' é um campo obrigatório.</value>
   </data>
@@ -132,8 +135,14 @@
   <data name="EMPTY_PAGESIZE" xml:space="preserve">
     <value>'PageSize' é um campo obrigatório.</value>
   </data>
+  <data name="EMPTY_PASSWORD" xml:space="preserve">
+    <value>'Password' é um campo obrigatório.</value>
+  </data>
   <data name="EMPTY_STATE" xml:space="preserve">
     <value>'State' é um campo obrigatório.</value>
+  </data>
+  <data name="EMPTY_USERROLE" xml:space="preserve">
+    <value>'UserRole' é um campo obrigatório.</value>
   </data>
   <data name="EXECUTION_SUCCESS_MSG" xml:space="preserve">
     <value>Método executado com sucesso.</value>
@@ -159,6 +168,9 @@
   <data name="INVALID_CODE" xml:space="preserve">
     <value>Código de município informado não é válido.</value>
   </data>
+  <data name="INVALID_EMAIL" xml:space="preserve">
+    <value>O campo e-mail está inválido.</value>
+  </data>
   <data name="INVALID_PAGEINDEX" xml:space="preserve">
     <value>O valor inserido no PageIndex não é válido.</value>
   </data>
@@ -167,6 +179,12 @@
   </data>
   <data name="INVALID_STATE" xml:space="preserve">
     <value>O estado informado não existe.</value>
+  </data>
+  <data name="INVALID_USERROLE" xml:space="preserve">
+    <value>O campo UserRole está inválido.</value>
+  </data>
+  <data name="LENGTH_PASSWORD" xml:space="preserve">
+    <value>A senha deve ter pelo menos tamanho {0}</value>
   </data>
   <data name="NO_EXISTING_CODE" xml:space="preserve">
     <value>O código de município informado não está registrado.</value>
