--- a/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
+++ b/src/Shared/BrazilianAddresses.Exceptions/ResourcesMessage/APIMSG.pt.resx
@@ -186,6 +186,9 @@
   <data name="LISTING_COMPLETED" xml:space="preserve">
     <value>Listagem concluída com sucesso.</value>
   </data>
+  <data name="NO_EXISTING_CITY" xml:space="preserve">
+    <value>A cidade informada não está registrada.</value>
+  </data>
   <data name="NO_EXISTING_CODE" xml:space="preserve">
     <value>O código de município informado não está registrado.</value>
   </data>
